# wx-simple

./: CMakeLists.txt  readme.md  simple.cpp  simple.h
